--- a/001 Clusters/000 DCS_GLM_somalogic_OneVsAll_adjusted.Rmd
+++ b/001 Clusters/000 DCS_GLM_somalogic_OneVsAll_adjusted.Rmd
@@ -9,7 +9,8 @@ output: md_document
 
 ```{r setup, message=FALSE, eval=FALSE}
 library(datashieldclient)
-library(dsCDISCclient)
+library(dsBaseClient)
+library(dsSwissKnifeClient)
 library(survminer)
 library(survival)
 library(reshape2)
@@ -22,22 +23,26 @@ knitr::opts_knit$set(root.dir = "D:/001_Projects/001_RHAPSODY/")
 ## Login
 
 ```{r login, message=F, eval=FALSE}
-source("./000.Final_Scripts/003.Utils/Utils.R")
-source("./000.Final_Scripts/003.Utils/Utils_GB.R")
-source("./000.Final_Scripts/003.Utils/Utils_CoxModels.R")
+source("D:/001_Projects/001_RHAPSODY/001.Scripts/001 New utils/Utils_CoxModels.R")
+source("D:/001_Projects/001_RHAPSODY/001.Scripts/001 New utils/Utils_GB.R")
+source("D:/001_Projects/001_RHAPSODY/001.Scripts/001 New utils/Utils.R")
+
 datasource <- "opal"
 loginpath <- "logindata_template.txt"
 cohort <- "dcs"
-logIn(datasource, loginpath, cohort)
+
+logins <- read.table(loginpath, header=T)
+logins <- logins[logins$server %in% c(cohort),]
+assign("opal",datashield.login(logins), envir = .GlobalEnv)
 ```
  
 ## Load data
 
 ```{r load, eval=FALSE}
 #Select required attributes 
-myAttributes <- c("SOMALOGIC","CLUSTER","TimeToSpin")
-myTransform <-c(3,0,0)
-prepareData(assign="ModelData",opal=opal,attributes=myAttributes,
+myAttributes <- c("SOMALOGIC","CLUSTER","SEX","AGE","BMI","HBA1C","HDL","LDL","TRIG","CPEPTIDE","TimeToSpin")
+myTransform <-c(3,rep(0, length(myAttributes)-1))
+prepareData(assign="ModelData",opal=opal,attributes=myAttributes,cohort = "dcs",
             transformVector=myTransform)
 ```
 
@@ -48,17 +53,21 @@ peptides <- ds.colnames('ModelData')$dcs
 peptides <- peptides[grep("SL0", peptides)]
 
 # SIDD comparisons
-DCS.peptidomics.results.SIDD  <- getModelForClusters(peptides, compCluster=2, refCluster="3,4,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin')
-DCS.peptidomics.results.SIRD  <- getModelForClusters(peptides, compCluster=3, refCluster="2,4,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin')
-DCS.peptidomics.results.MOD  <- getModelForClusters(peptides, compCluster=4, refCluster="2,3,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin')
-DCS.peptidomics.results.MARD  <- getModelForClusters(peptides, compCluster=5, refCluster="2,3,4,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin')
-DCS.peptidomics.results.MARDH  <- getModelForClusters(peptides, compCluster=6, refCluster="2,3,4,5", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin')
+DCS.pept.SIDD.adj  <- getModelForClusters(peptides, compCluster=2, refCluster="3,4,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin+ ModelData.subset$LBTESTCD.HBA1C')
 
-save(DCS.peptidomics.results.SIDD, 
-     DCS.peptidomics.results.SIRD, 
-     DCS.peptidomics.results.MOD, 
-     DCS.peptidomics.results.MARD, 
-     DCS.peptidomics.results.MARDH, 
+DCS.pept.SIRD.adj  <- getModelForClusters(peptides, compCluster=3, refCluster="2,4,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin+ ModelData.subset$LBTESTCD.CPEPTIDE')
+
+DCS.pept.MOD.adj  <- getModelForClusters(peptides, compCluster=4, refCluster="2,3,5,6", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin + ModelData.subset$VSTESTCD.BMI')
+
+DCS.pept.MDH.adj   <- getModelForClusters(peptides, compCluster=6, refCluster="2,3,4,5", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin + ModelData.subset$LBTESTCD.HDL')
+
+DCS.pept.MDH.adj_TRIG   <- getModelForClusters(peptides, compCluster=6, refCluster="2,3,4,5", formula='ModelData.subset$%s~ModelData.subset$newCluster + ModelData.subset$LBTESTCD.TimeToSpin + ModelData.subset$LBTESTCD.HDL + ModelData.subset$LBTESTCD.TRIG')
+
+save(DCS.pept.SIDD.adj, 
+     DCS.pept.SIRD.adj, 
+     DCS.pept.MOD.adj, 
+     DCS.pept.MDH.adj, 
+     DCS.pept.MDH.adj_TRIG, 
      file="./000.Final_Scripts/002.Clusters.Data/Peptides GLM_models across clusters_FDB_DCS_OneVsAll_adjusted.RData")
 ```
 
