--- a/001 Clusters/000 GoDARTS_GLM_metabolomics_OneVsAll.Rmd
+++ b/001 Clusters/000 GoDARTS_GLM_metabolomics_OneVsAll.Rmd
@@ -2,7 +2,7 @@
 title: "GLM model metabolomics data GoDARTS"
 author: "R.C.Slieker"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: html_document
+output: md_document
 ---
 
 ## Load packages
