--- a/README.Rmd
+++ b/README.Rmd
@@ -7,13 +7,41 @@ output: md_document
 knitr::opts_knit$set(root.dir = "D:/001_Projects/033 Final scripts RHAPSODY/")
 ```
 
-## Clusters
+### 1.Metabolomics 
 
-### Metabolomics 
+[DCS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_metabolomics_OneVsAll.md)
 
-#### Unadjusted
-[DCS Metabolomics](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_metabolomics_OneVsAll.md)
+[GoDARTS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_metabolomics_OneVsAll.md)
 
-[GoDARTS Metabolomics](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_metabolomics_OneVsAll.md)
+[ANDIS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_metabolomics_OneVsAll.md)
 
-[ANDIS Metabolomics](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_metabolomics_OneVsAll_adjusted.md)
+[DCS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_metabolomics_OneVsAll_adjusted.md)
+
+[GoDARTS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_metabolomics_OneVsAll_adjusted.md)
+
+[ANDIS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_metabolomics_OneVsAll_adjusted.md)
+
+
+#### Meta-analysis
+
+[Meta-analysis adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Metabolomics_GLM_Clusters.md)
+
+[Meta-analysis adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Metabolomics_GLM_Clusters_Adjusted.md)
+
+### 2.Lipidomics
+
+[DCS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_lipidomics_OneVsAll.md)
+
+[GoDARTS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_lipidomics_OneVsAll.md)
+
+[ANDIS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_lipidomics_OneVsAll.md)
+
+[DCS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_lipidomics_OneVsAll_adjusted.md)
+
+[GoDARTS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_lipidomics_OneVsAll_adjusted.md)
+
+[ANDIS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_lipidomics_OneVsAll_adjusted.md)
+
+
+
+
