--- a/README.Rmd
+++ b/README.Rmd
@@ -7,13 +7,19 @@ output: md_document
 knitr::opts_knit$set(root.dir = "D:/001_Projects/033 Final scripts RHAPSODY/")
 ```
 
+## Clusters
+
 ### 1.Metabolomics 
+
+Unadjusted
 
 [DCS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_metabolomics_OneVsAll.md)
 
 [GoDARTS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_metabolomics_OneVsAll.md)
 
-[ANDIS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_metabolomics_OneVsAll.md)
+[ANDIS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000%20ANDIS_GLM_metabolomics%20_OneVsAll.Rmd)
+
+Unadjusted
 
 [DCS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_metabolomics_OneVsAll_adjusted.md)
 
@@ -24,15 +30,15 @@ knitr::opts_knit$set(root.dir = "D:/001_Projects/033 Final scripts RHAPSODY/")
 
 #### Meta-analysis
 
-[Meta-analysis adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Metabolomics_GLM_Clusters.md)
+[Metabolomics unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001%20Combine_Metabolomics_GLM_Clusters.md)
 
-[Meta-analysis adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Metabolomics_GLM_Clusters_Adjusted.md)
+[Metabolomics adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Metabolomics_GLM_Clusters_Adjusted.md)
 
 ### 2.Lipidomics
 
-[DCS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-DCS_GLM_lipidomics_OneVsAll.md)
+[DCS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000%20DCS_GLM_lipidomics_OneVsAll.md)
 
-[GoDARTS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-GoDARTS_GLM_lipidomics_OneVsAll.md)
+[GoDARTS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000%20GoDARTS_GLM_metabolomics_OneVsAll.Rmd)
 
 [ANDIS unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_lipidomics_OneVsAll.md)
 
@@ -42,6 +48,11 @@ knitr::opts_knit$set(root.dir = "D:/001_Projects/033 Final scripts RHAPSODY/")
 
 [ANDIS adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/000-ANDIS_GLM_lipidomics_OneVsAll_adjusted.md)
 
+#### Meta-analysis
+
+[Lipidomics unadjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001%20Combine_Lipidomics_GLM_Clusters.md)
+
+[Lipidomics adjusted](https://github.com/roderickslieker/RHAPSODY/blob/master/001%20Clusters/001_Combine_Lipidomics_GLM_Clusters_Adjusted.md)
 
 
 
