--- a/002 Progression/GoDARTS_Metabolites_CoxModels_Run1.Rmd
+++ b/002 Progression/GoDARTS_Metabolites_CoxModels_Run1.Rmd
@@ -2,7 +2,7 @@
 title: "Cox model metabolomics GODARTS"
 author: "Gerard Bouland / Roderick Slieker"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE, eval=F}
