--- a/README.Rmd
+++ b/README.Rmd
@@ -100,15 +100,18 @@ Adjusted
 
 ### Metabolomics
 
-[DCS Lipids](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/DCS_Lipids_CoxModels.md)
+[DCS Metabolites](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/DCS_Metabolites_CoxModels.md)
 
 [GoDARTS Metabolites discovery](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/GoDARTS_Metabolites_CoxModels_Run1.md)
 
 [GoDARTS Metabolites validation](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/GoDARTS_Metabolites_CoxModels_Run2.md)
 
-[ANDIS Metabolites discovery](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/ANDIS_Metabolites_CoxModels_Run1.md)
+[ANDIS Metabolites discovery](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/Andis_Metabolites_CoxModels_Run1.md)
 
-[ANDIS Metabolites validation](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/ANDIS_Metabolites_CoxModels_Run2.md)
+[ANDIS Metabolites validation](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/Andis_Metabolites_CoxModels_Run2.md)
+
+[Combine metabolites](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/Metabolites_Combine_withReplication.html)
+
 
 ### Lipids
 
@@ -116,7 +119,10 @@ Adjusted
 
 [GoDARTS Lipids](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/GoDARTS_Lipids_CoxModels.md)
 
-[ANDIS Lipids](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/ANDIS_Lipids_CoxModels.md)
+[ANDIS Lipids](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/Andis_Lipids_CoxModels.md)
+
+
+[Combine Lipids]()
 
 ### Proteins
 
@@ -124,6 +130,6 @@ Adjusted
 
 [GoDARTS Proteins](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/GoDARTS_Peptides_CoxModels.md)
 
-[ANDIS Proteins](https://github.com/roderickslieker/RHAPSODY/blob/master/002%20Progression/ANDIS_Peptides_CoxModels.md)
+
 
 
