md instead of HTML

--- a/002 Progression/GoDARTS_Sensitivity_Analyses_BMI_Cpep.Rmd
+++ b/002 Progression/GoDARTS_Sensitivity_Analyses_BMI_Cpep.Rmd
@@ -2,7 +2,7 @@
 title: "Cox model metabolomics godarts"
 author: "Roderick Slieker"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE, eval=F}
